fix a.button text alignment globally

--- a/src/media/css/ratings.styl
+++ b/src/media/css/ratings.styl
@@ -217,7 +217,6 @@ select[name=rating] {
         vertical-align: middle;
 
         &:first-child {
-            line-height: 48px;
             padding-right: 6px;
         }
     }
